# LI1-Project

./: 2022li1g034.cabal  README.md
doc/html/: LI12223.html  Main.html  Tarefa1_2022li1g034.html  Tarefa2_2022li1g034.html  Tarefa3_2022li1g034.html  Tarefa4_2022li1g034.html  Tarefa5_2022li1g034.html  Tarefa6_2022li1g034.html  doc-index.html  index.html
src/: Main.hs  Tarefa1_2022li1g034.hs  Tarefa2_2022li1g034.hs  Tarefa3_2022li1g034.hs  Tarefa4_2022li1g034.hs  Tarefa5_2022li1g034.hs  Tarefa6_2022li1g034.hs
tests/: Spec.hs  Tarefa1_2022li1g034_Spec.hs  Tarefa2_2022li1g034_Spec.hs  Tarefa3_2022li1g034_Spec.hs  Tarefa4_2022li1g034_Spec.hs
